--- a/README.rm
+++ b/README.rm
@@ -17,6 +17,6 @@ Update static files on Google App Engine;
 Create migrations && commit;
 Update changelog && commit;
 Tag w/ version number;
-Push master to heroku;
-Push tag to heroku;
+Push master && tag to heroku;
+Check;
 Push master && tag to origin.
