--- a/locale/pt_BR/LC_MESSAGES/djangojs.po
+++ b/locale/pt_BR/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-05-05 17:40-0300\n"
+"POT-Creation-Date: 2013-05-05 17:47-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,7 +26,9 @@ msgstr "Balanço mensal"
 msgid ""
 "Shows the sum of all your transactions up to the current day, and the "
 "comparison with the previous months."
-msgstr "Exibe a soma de todas as suas transações até o dia atual, e a comparação com os meses anteriores."
+msgstr ""
+"Exibe a soma de todas as suas transações até o dia atual, e a comparação com "
+"os meses anteriores."
 
 #: static/js/entry-list.js:35
 msgid "Example: \"Groceries\", \"Lunch\""
