--- a/README.rm
+++ b/README.rm
@@ -15,8 +15,8 @@ Update translations;
 Compile less;
 Update static files on Google App Engine;
 Create migrations && commit;
-Update changelog && commit;
 Tag w/ version number;
 Push master && tag to heroku;
+Run migrations;
 Check;
 Push master && tag to origin.
