--- a/README.rm
+++ b/README.rm
@@ -34,6 +34,10 @@ Installation instructions for development:
 
     `pip install -r requirements.txt`
 
+- Set up the local settings file:
+    
+    `grunt patch-settings --file dev`
+
 - Test your installation:
 
     `python manage.py test`
